--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -16,10 +16,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}" th:classappend="${currentPage == 'home'} ? 'active'">Beranda</a>
+                        <a class="nav-link" th:href="@{/}" th:classappend="${currentPage == 'home'} ? 'active'">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/rooms}" th:classappend="${currentPage == 'rooms'} ? 'active'">Pekerja</a>
+                        <a class="nav-link" th:href="@{/rooms}" th:classappend="${currentPage == 'reservations'} ? 'active'">Reservation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/rooms}" th:classappend="${currentPage == 'rooms'} ? 'active'">Rooms</a>
                     </li>
                 </ul>
             </div>
