--- a/src/main/resources/templates/viewall-reservation.html
+++ b/src/main/resources/templates/viewall-reservation.html
@@ -35,13 +35,13 @@
                 </tr>
             </thead>
             <tbody>
-                <tr th:each="reservation, iterStat : ${listReservations}">
+                <tr th:each="reservation, iterStat : ${listReservations}" th:if="${!reservation.isDeleted}">
                     <td th:text="${iterStat.index + 1}"></td>
                     <td th:text="${reservation.id}"></td>
                     <td th:text="${reservation.room != null ? reservation.room.name : 'N/A'}"></td>
                     <td th:text="${reservation.patient != null ? reservation.patient.name : 'N/A'}"></td>
-                    <td th:text="${#dates.format(reservation.dateIn, 'dd/MM/yyyy')}"></td>
-                    <td th:text="${#dates.format(reservation.dateOut, 'dd/MM/yyyy')}"></td>
+                    <td th:text="${#dates.format(reservation.dateIn, 'dd MMMM yyyy')}"></td>
+                    <td th:text="${#dates.format(reservation.dateOut, 'dd MMMM yyyy')}"></td>
                     <td th:text="${reservation.status}"></td>
                     <td>
                         <a th:href="@{/reservations/{id}(id=${reservation.id})}" class="btn btn-info">Detail</a>
