--- a/src/main/resources/templates/form-nik-reservation.html
+++ b/src/main/resources/templates/form-nik-reservation.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <title>Create Reservation</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
 </head>
 
 <body class="flex items-center justify-center w-full h-screen bg-gray-100">
+    <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="card w-96 p-6 bg-white rounded-lg shadow-md">
         <h1 class="text-2xl font-bold text-center mb-4">Search Patient</h1>
         <form th:action="@{/reservations/create}" method="POST" class="flex flex-col">
