--- a/src/main/resources/templates/form-update-room.html
+++ b/src/main/resources/templates/form-update-room.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Update Ruangan</title>
     <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
-    <title>Update Ruangan</title>
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <div class="container">
+    <div class="container mt-20 pb-2">
         <div class="text-center my-4">
             <h2>Update Ruangan</h2>
         </div>
@@ -53,7 +53,7 @@
 
                             <div class="flex gap-2 my-3">
                                 <button type="submit" class="btn btn-primary">Submit</button>
-                                <a class="btn btn-secondary" href="@{/rooms/{roomId}(roomId=${roomDTO.id})}">Cancel</a>
+                                <a class="btn btn-danger" href="@{/rooms/{roomId}(roomId=${id})}">Cancel</a>
                             </div>
                         </form>
                     </div>
