--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,26 +6,17 @@
 </head>
 
 <body>
-    <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light w-screen">
-        <div class="container-fluid">
-            <a class="navbar-brand fw-bold text-primary nav-link" th:href="@{/}">APAP Medika</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/}" th:classappend="${currentPage == 'home'} ? 'active'">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/rooms}" th:classappend="${currentPage == 'reservations'} ? 'active'">Reservation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/rooms}" th:classappend="${currentPage == 'rooms'} ? 'active'">Rooms</a>
-                    </li>
-                </ul>
-            </div>
+    <nav th:fragment="navbar" class="navbar w-full flex items-center justify-between py-3 bg-purple-900 absolute top-0">
+        <div>
+            <a href="/" class="text-2xl font-bold text-white">APAP Medika</a>
+        </div>
+
+        <div>
+            <ul class="flex space-x-6 text-purple-300 font-semibold">
+                <li><a href="/" class="hover:text-purple-100">Home</a></li>
+                <li><a href="/reservations" class="hover:text-purple-100">Reservations</a></li>
+                <li><a href="/rooms" class="hover:text-purple-100">Rooms</a></li>
+            </ul>
         </div>
     </nav>
 </body>
