--- a/src/main/resources/templates/patient-found.html
+++ b/src/main/resources/templates/patient-found.html
@@ -3,15 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Patient Found</title>
     <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
     <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
-    <title>Patient Found</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body class="w-full h-screen justify-center items-center">
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <div class="container mt-4">
+    <div class="container mt-20 pb-2">
         <div class="text-center mb-4">
             <h2>Patient Found</h2>
         </div>
