--- a/src/main/resources/templates/view-room.html
+++ b/src/main/resources/templates/view-room.html
@@ -3,101 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <title>Detail Ruangan</title>
-
-    <object th:include="fragments/common :: js" th:remove="tag"></object>
-    <object th:include="fragments/common :: css" th:remove="tag"></object>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />
-    <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
+    <object th:include="~{fragments/common :: js}" th:remove="tag"></object>
+    <object th:include="~{fragments/common :: css}" th:remove="tag"></object>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <div class="px-32 pt-5 w-full">
-    <div>
-        <p>Room ID: <span th:text="${room.id}"></span></p>
-        <p>Room Name: <span th:text="${room.name}"></span></p>
-        <p>Max Capacity: <span th:text="${room.maxCapacity}"></span></p>
-        <p>Price: <span th:text="'Rp' + ${room.pricePerDay} + '/ Day'"></span></p>
-        <p>Description: <span th:text="${room.description}"></span></p>
-        <p>Patient:</p>
-    </div>
+    <div class="container mt-20 pb-2">
+        <div class="row justify-content-center">
+            <div class="card" style="width: 60rem;">
+                <div class="card-body flex flex-col w-full">
+                    <div class="w-full">
+                        <div>
+                            <p>Room ID: <span th:text="${room.id}"></span></p>
+                            <p>Room Name: <span th:text="${room.name}"></span></p>
+                            <p>Max Capacity: <span th:text="${room.maxCapacity}"></span></p>
+                            <p>Price: <span th:text="'Rp' + ${room.pricePerDay} + '/ Day'"></span></p>
+                            <p>Description: <span th:text="${room.description}"></span></p>
+                            <p>Patient:</p>
+                        </div>
 
-    <form method="get" th:action="@{/rooms/{roomId}(roomId=${room.id})}" class="flex gap-2">
-        <div class="flex flex-col">
-            <label for="dateIn">Reservation Date In</label>
-            <input type="text" id="dateIn" name="dateIn"
-                th:value="${#dates.format(dateIn, 'dd/MM/yyyy')}"
-                placeholder="dd/MM/yyyy" required />
-        </div>
-    
-        <div class="flex flex-col">
-            <label for="dateOut">Reservation Date Out</label>
-            <input type="text" id="dateOut" name="dateOut"
-                th:value="${#dates.format(dateOut, 'dd/MM/yyyy')}"
-                placeholder="dd/MM/yyyy" required />
-        </div>
-    
-        <button type="submit" class="btn btn-primary">Apply</button>
-    </form>
-    
-    <p>Quota Available: <span th:text="${availableQuota}"></span></p>
-    <table id="reservationsTable" class="table-auto w-full">
-        <thead>
-            <tr>
-                <th>No</th>
-                <th>Name</th>
-                <th>Gender</th>
-                <th>Email</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="reservation, iterStat : ${listReservation}">
-                <td th:text="${iterStat.index + 1}"></td>
-                <td th:text="${reservation.patient.name}"></td>
-                <td th:text="${reservation.patient.gender ? 'Female' : 'Male'}"></td>
-                <td th:text="${reservation.patient.email}"></td>
-            </tr>
-        </tbody>
-    </table>
+                        <form method="get" th:action="@{/rooms/{roomId}(roomId=${room.id})}" class="flex w-full gap-3">
+                            <div class="row my-2">
+                                <div class="col-sm-12 flex flex-col">
+                                    <label for="dateIn" class="fw-bold col-form-label">Reservation Date In</label>
+                                    <input class="form-control" type="text" id="dateIn" name="dateIn"
+                                        th:value="${#dates.format(dateIn, 'dd/MM/yyyy')}"
+                                        placeholder="dd/MM/yyyy" required />
+                                </div>
+                            </div>
+                            
+                            <div class="row my-2">
+                                <div class="col-sm-12 flex flex-col">
+                                    <label for="dateOut" class="fw-bold col-form-label">Reservation Date Out</label>
+                                    <input class="form-control" type="text" id="dateOut" name="dateOut"
+                                        th:value="${#dates.format(dateOut, 'dd/MM/yyyy')}"
+                                        placeholder="dd/MM/yyyy" required />
+                                </div>
+                            </div>
 
-    <div class="flex justify-between w-full">
-        <a th:href="@{/rooms}" class="btn btn-primary">Back</a>
-        <div class="w-full justify-end flex gap-2">
-            <a th:href="@{/rooms/{roomId}/update(roomId=${room.id})}" class="btn btn-primary">Update</a>
-            <a class="btn btn-danger text-white" data-toggle="modal" data-target="#confirmModal" th:data-room-name="${room.name}" th:data-room-id="${room.id}">Delete</a>
-        </div>
-    </div>
+                            <div class="row my-2">
+                                <div class="col-sm-12 flex flex-col flex items-center">
+                                    <button type="submit" class="btn btn-primary h-8 mt-4">Apply</button>
+                                </div>
+                            </div>
+                        </form>
 
-    <!-- Confirmation Modal -->
-    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="confirmModalLabel">Delete Room</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete <strong th:text="${room.name}"></strong> room?
-                </div>
-                <div class="modal-footer">
-                    <form id="deleteRoomForm" method="post" th:action="@{/rooms/{roomId}/delete(roomId=${room.id})}" style="display:inline;">
-                        <button type="submit" class="btn btn-danger">Yes</button>
-                    </form>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <p>Quota Available: <span th:text="${availableQuota}"></span></p>
+                        <table id="reservationsTable" class="table-auto w-full">
+                            <thead>
+                                <tr>
+                                    <th>No</th>
+                                    <th>Name</th>
+                                    <th>Gender</th>
+                                    <th>Email</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="reservation, iterStat : ${listReservation}">
+                                    <td th:text="${iterStat.index + 1}"></td>
+                                    <td th:text="${reservation.patient.name}"></td>
+                                    <td th:text="${reservation.patient.gender ? 'Female' : 'Male'}"></td>
+                                    <td th:text="${reservation.patient.email}"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
+                        <div class="d-flex justify-content-between">
+                            <a th:href="@{/rooms}" class="btn btn-primary">Back</a>
+                            <div class="w-full justify-end d-flex gap-2">
+                                <a th:href="@{/rooms/{roomId}/update(roomId=${room.id})}" class="btn btn-primary">Update</a>
+                                <a class="btn btn-danger text-white" data-toggle="modal" data-target="#confirmModal"
+                                    th:data-room-name="${room.name}" th:data-room-id="${room.id}">Delete</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Confirmation Modal -->
+                    <div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-labelledby="confirmModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="confirmModalLabel">Delete Room</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete <strong th:text="${room.name}"></strong> room?
+                                </div>
+                                <div class="modal-footer">
+                                    <form id="deleteRoomForm" method="post" th:action="@{/rooms/{roomId}/delete(roomId=${room.id})}" style="display:inline;">
+                                        <button type="submit" class="btn btn-danger">Yes</button>
+                                    </form>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 
     <script>
