--- a/src/main/resources/templates/viewall-reservation.html
+++ b/src/main/resources/templates/viewall-reservation.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Reservations</title>
-
     <object th:include="fragments/common :: js" th:remove="tag"></object>
     <object th:include="fragments/common :: css" th:remove="tag"></object>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.datatables.net/2.1.7/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/jquery.dataTables.min.css" />
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <div class="container mt-5">
+    <div class="container mt-20 pb-2">
         <div class="d-flex justify-content-between mb-3">
             <h1>Reservations</h1>
             <a th:href="@{/reservations/create}" class="btn btn-primary">Add Reservation</a>
