--- a/src/main/resources/templates/viewall-room.html
+++ b/src/main/resources/templates/viewall-room.html
@@ -4,20 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Daftar Ruangan</title>
-
     <object th:include="fragments/common :: js" th:remove="tag"></object>
     <object th:include="fragments/common :: css" th:remove="tag"></object>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css" />
-    <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 
 <body>
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
-    <div class="container px-10 my-5">
+    <div class="container mt-20 pb-2">
         <div class="flex justify-between">
             <h1 class="text-3xl">Rooms</h1>
             <a href="/rooms/create" class="btn btn-primary">Add Room</a>
