nitip kak, buat belajar uts, jangan dinilai ya hehe

--- a/src/main/resources/templates/form-create-reservation-2.html
+++ b/src/main/resources/templates/form-create-reservation-2.html
@@ -12,6 +12,7 @@
     <nav th:replace="~{fragments/navbar :: navbar}"></nav>
     <div class="container">
         <div class="text-center my-4">
+            <h2>Step 3 of 3</h2>
             <h2>Add Facilities (Optional)</h2>
         </div>
         <div class="row justify-content-center">
